--- a/week1/week1.css
+++ b/week1/week1.css
@@ -1,9 +1,12 @@
 /* 手機樣式 */
-@media (min-width: 361px) and (max-width: 600px) {
+@media (min-width: 359px) and (max-width: 600px) {
   * {
     font-size: 20px;
     margin: 0; /*全體*/
+    overflow-x: hidden;
   }
+  
+
   h3 {
     font-weight: normal;
   }
@@ -113,6 +116,7 @@
   }
   .welcome h1 {
     font-size: 40px;
+    text-align: center; /*welcom to myhome center*/
   }
   .main {
     /*main content should cover 90% of screen width.*/
@@ -233,7 +237,10 @@
   * {
     font-size: 20px;
     margin: 0; /*全體*/
+    overflow-x: hidden;
   }
+  
+
   .nav-ham-menu{
     display: none; /*hide ham-menu and nav itself */
   }
@@ -451,8 +458,13 @@
 @media (min-width: 1201px) and (max-width: 1920px) {
   * {
     font-size: 20px;
-    margin: 0; /*全體*/
-  }
+    margin: 0;
+     /*全體*/
+     overflow-x: hidden;
+    
+}
+
+  
   .nav-ham-menu{
     display: none; /*hide ham-menu and nav itself */
   }
@@ -492,13 +504,16 @@
     justify-content: center;
     background-color: rgb(223, 238, 247);
     height: 250px;
-    width: 100vw;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
     margin-bottom: 40px; /*外距下方*/
-    position: relative; /*處理左方白邊問題*/
-    left: 50%; /*處理左方白邊問題*/
-    transform: translateX(-50%); /*處理左方白邊問題*/
+    position: relative;
+     /*處理左方白邊問題*/
+    /* left: 50%;  */
+    /*處理左方白邊問題*/
+    /* transform: translateX(-50%);  */
+    /*處理左方白邊問題*/
   }
   .welcome h1 {
     font-size: 40px;
@@ -506,8 +521,8 @@
   .main {
     width: 1200px;
     margin: 0 auto;
+    
   }
-
   .small_box {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; /* 定義6行平分*/
@@ -555,11 +570,7 @@
     width: 1200px;
     margin-top: 20px; /*外距上方*/
   }
-  /* .big_box img {
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-  } */
+
   .title1 {
     grid-row: 1 / 2; /* 放置在二行 */
     grid-column: 1 / 3; /* 放置在第列 */
