--- a/week1/week1.css
+++ b/week1/week1.css
@@ -5,8 +5,6 @@
     margin: 0; /*全體*/
     overflow-x: hidden;
   }
-  
-
   h3 {
     font-weight: normal;
   }
@@ -20,7 +18,6 @@
   .logo {
     position: relative;
     margin-left: 10px;
-    
   }
 /* hide menu */
   .navbar {
@@ -28,7 +25,7 @@
     height: 100vh;
     max-width: 50vw;
     position: fixed;
-    z-index: 999;/*最上方*/
+    z-index: 100;/*最上方*/
     top: 0;
     right: -500px;
     display: flex;
@@ -40,48 +37,40 @@
   }
 .navbar.active{
   right: 0;
+   /*解決firefox navbar active寬度問題*/
+   width: 50vw;
+}
+/* 測試 */
+.burger-icon,
+.xicon {
+  width: 40px;
+  height: 40px;
+  transition: opacity 0.1s ease;
+  top: 5px;
 }
 
-/* ham menu */
-.ham-menu {
-  height: 50px;
-  width: 40px;
-  margin-left: auto;
-  position: relative;
-  z-index: 999; /*最上方*/
-  right: 10px;
+.burger-icon {
+  opacity: 1;
+  padding-top: 5px; /*微調對mywebsite*/
 }
-.ham-menu span {
-  height: 5px;
-  width: 100%;
-  background-color: #000000;
-  border-radius: 25px;
+
+.xicon {
+  opacity: 0;
   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  transition: .3s ease;
+  top: 5px;
+  right: 1px;
 }
-.ham-menu span:nth-child(1) {
-  top: 25%;
-}
-.ham-menu span:nth-child(3) {
-  top: 75%;
-}
-.ham-menu.active span {
-  background-color: rgb(0, 0, 0);
-}
-.ham-menu.active span:nth-child(1) {
-  top: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-}
-.ham-menu.active span:nth-child(2) {
+
+.menu-icon.active .burger-icon {
   opacity: 0;
 }
-.ham-menu.active span:nth-child(3) {
-  top: 50%;
-  transform: translate(-50%, -50%) rotate(-45deg);
+
+.menu-icon.active .xicon {
+  opacity: 1;
+  position: fixed; /*固定在navbar*/
+  z-index: 9999;
 }
+
 
   .Item1,
   .Item2,
@@ -98,6 +87,7 @@
     display: inline-block;
     /* margin-right: 20px; */
   }
+  
 
 
   .welcome {
@@ -187,6 +177,8 @@
   .title9,
   .title10 {
     position: relative; /*父層*/
+    overflow: hidden; /*避免scrollbar*/
+
   }
 
   .title1 img,
@@ -241,7 +233,7 @@
   }
   
 
-  .nav-ham-menu{
+  .menu-icon{
     display: none; /*hide ham-menu and nav itself */
   }
   h3 {
@@ -464,9 +456,8 @@
     
 }
 
-  
-  .nav-ham-menu{
-    display: none; /*hide ham-menu and nav itself */
+.menu-icon{
+    display: none; /*hide div itself */
   }
   h3 {
     font-weight: normal;
